Improves checking rules and log messages

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A simple NodeJS application to allow dynamic ip addresses in Cloudflare's DNS records",
   "dependencies": {
+    "bunyan": "^1.8.12",
     "cloudflare": "^2.7.0",
     "public-ip": "^4.0.0"
   }
